<resources>
    <string name="app_name">Color Scramble</string>

    <!--  Splash -->
    <string name="splash_image">Splash Image</string>

    <!--  Login -->
    <string name="login_background">login background</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>

    <string name="color_scramble">Color Scramble</string>

    <string name="register">REGISTER</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="name_hint">Username</string>
    <string name="timer_value">Timer Value</string>
    <string name="scramble">Scramble</string>


</resources>