<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    style="@style/loginParent" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        style="@style/loginParent"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/parent"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/parent"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="@string/login_background" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_scramble"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/loginCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/whiteCardColor"
            android:elevation="5dp"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/loginCardRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.186">


            <LinearLayout
                style="@style/linearParent"
                android:layout_gravity="center"
                android:padding="@dimen/loginViewsMargin">

                <TextView
                    style="@style/headerTextPrimary"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/login" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/edt_email"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edt_password"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/txt_signup"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/login_signup_hint"
                    android:textAlignment="center"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
